# 7T_anatprep

./: README.md  environment.yml  pyproject.toml
anatprep/: __init__.py  __main__.py  cli.py
anatprep/commands/: __init__.py  brainmask_edit.py  cat12.py  denoise.py  fmriprep.py  inspect.py  mask.py  nighres_dura.py  nighres_skullstrip.py  pymp2rage.py  sinus_auto.py  sinus_edit.py  spm_mask.py  status.py  test.py
anatprep/core/: __init__.py  iteration.py  subject.py  utils.py
anatprep/scripts/: cat12_batch.sh  sanlm_batch.sh  spm_mask.sh
anatprep/scripts/helpers/: spmBrainMask.m
configs/: example_anatprep_config.yml
